<resources>
    <string name="app_name">GitHubFavorites</string>
    <string name="title_home">Home</string>
    <string name="detail_activity">User Detail</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="company_name">Company name</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="count">100</string>
    <string name="profile_name">Reza Haris Alfikri</string>
    <string name="profile_major">Informatics Engineering Student</string>
    <string name="profile_campus">Stikubank University</string>
    <string name="profile_email">a3162842@bangkit.academy</string>
    <string name="profile_phone">+6288228864327</string>
    <string name="profile_location">Kaligetas, Kecamatan Mijen, Kota Semarang</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="location_name">Location Name</string>
    <string name="change_languange">Change Languange</string>
    <string name="delete_data">Data deleted successfully</string>
    <string name="add_data">Data added successfully</string>
    <string name="set_languange">SetLanguage</string>
    <string name="set_lang">Language</string>
    <string name="choose_lang">English</string>
    <string name="set_reminder">set_reminder</string>
    <string name="set_reminder_9am">Set Reminder at 9am</string>
    <string name="reminder_on">Reminder is on</string>
    <string name="reminder_off">Reminder is Off</string>
    <string name="reminder_set">Reminder Set Up</string>
    <string name="reminder_cancel">Reminder Canceled</string>
    <string name="check_message">Check your GitHub Apps everytime :)</string>
    <string name="splash">splash</string>
</resources>