<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.activity.UserDetail">

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_color"
        app:cardElevation="@dimen/sixteen_dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:src="@drawable/img_profile" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="@dimen/sixteen_dp">

            <TextView
                android:id="@+id/tv_repository"
                style="@style/TextCount"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/sixteen_dp"/>

            <TextView
                android:id="@+id/tv_followers"
                style="@style/TextCount"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:gravity="center" />

            <TextView
                android:id="@+id/tv_following"
                style="@style/TextCount"
                android:layout_marginEnd="30dp"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/repository"
                style="@style/TextsStyle"
                android:layout_below="@+id/tv_repository"
                android:layout_marginTop="@dimen/four_dp"
                android:text="@string/repository" />

            <TextView
                android:id="@+id/followers"
                style="@style/TextsStyle"
                android:layout_below="@+id/tv_followers"
                android:layout_marginTop="@dimen/four_dp"
                android:layout_toStartOf="@+id/following"
                android:layout_toEndOf="@+id/repository"
                android:gravity="center"
                android:text="@string/followers" />

            <TextView
                android:id="@+id/following"
                style="@style/TextsStyle"
                android:layout_below="@+id/tv_following"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/four_dp"
                android:text="@string/following" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:layout_marginTop="105dp"
            android:layout_marginStart="@dimen/sixteen_dp" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextsStyle"
            android:textStyle="bold"
            android:text="@string/name"
            android:layout_marginTop="125dp"
            android:layout_marginStart="@dimen/sixteen_dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginTop="155dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_place" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextsStyle"
                android:text="@string/location_name"
                android:layout_marginStart="30dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginTop="185dp"
            android:layout_marginBottom="@dimen/sixteen_dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/company" />

            <TextView
                android:id="@+id/tv_company"
                style="@style/TextsStyle"
                android:layout_marginStart="30dp"
                android:text="@string/company_name"
                android:maxLines="2"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_color"
        app:tabTextColor="@color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>